--- a/env.yml
+++ b/env.yml
@@ -1,24 +1,25 @@
-name: ionq
+name: IonQ 
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - bzip2=1.0.8=h10d778d_5
-  - ca-certificates=2024.2.2=h8857fd0_0
-  - libexpat=2.6.2=h73e2aa4_0
-  - libffi=3.4.2=h0d85af4_5
-  - libsqlite=3.45.3=h92b6c6a_0
-  - libzlib=1.2.13=h87427d6_6
-  - ncurses=6.5=h5846eda_0
-  - openssl=3.3.0=h87427d6_3
-  - pip=24.0=pyhd8ed1ab_0
-  - python=3.11.9=h657bba9_0_cpython
-  - readline=8.2=h9e318b2_1
-  - setuptools=70.0.0=pyhd8ed1ab_0
-  - tk=8.6.13=h1abcd95_1
-  - tzdata=2024a=h0c530f3_0
-  - wheel=0.43.0=pyhd8ed1ab_1
-  - xz=5.2.6=h775f41a_0
+  - bzip2=1.0.8
+  - ca-certificates=2024.2.2
+  - libexpat=2.6.2
+  - libffi=3.4.2
+  - libsqlite=3.45.3
+  - libzlib=1.2.13
+  - ncurses=6.5
+  - openssl=3.3.0
+  - pip=24.0
+  - python=3.11.9
+  - readline=8.2
+  - setuptools=70.0.0
+  - tk=8.6.13
+  - tzdata=2024a
+  - wheel=0.43.0
+  - pip
+  - xz=5.2.6
   - pip:
       - anyio==4.4.0
       - appnope==0.1.4
@@ -31,7 +32,7 @@ dependencies:
       - babel==2.15.0
       - beautifulsoup4==4.12.3
       - bleach==6.1.0
-      - certifi==2024.2.2
+      - certifi==2024.6.2
       - cffi==1.16.0
       - charset-normalizer==3.3.2
       - comm==0.2.2
@@ -97,7 +98,7 @@ dependencies:
       - platformdirs==4.2.2
       - ply==3.11
       - prometheus-client==0.20.0
-      - prompt-toolkit==3.0.45
+      - prompt-toolkit==3.0.46
       - psutil==5.9.8
       - ptyprocess==0.7.0
       - pure-eval==0.2.2
@@ -113,9 +114,9 @@ dependencies:
       - python-json-logger==2.0.7
       - pyyaml==6.0.1
       - pyzmq==26.0.3
-      - qiskit==0.46.1
+      - qiskit==1.0.2
       - qiskit-ibmq-provider==0.20.2
-      - qiskit-ionq==0.5.1
+      - qiskit-ionq==0.5.2
       - qiskit-terra==0.46.1
       - qtconsole==5.5.2
       - qtpy==2.4.1
@@ -139,9 +140,10 @@ dependencies:
       - terminado==0.18.1
       - tinycss2==1.3.0
       - tornado==6.4
+      - tqdm==4.66.4
       - traitlets==5.14.3
       - types-python-dateutil==2.9.0.20240316
-      - typing-extensions==4.12.0
+      - typing-extensions==4.12.1
       - uri-template==1.3.0
       - urllib3==2.2.1
       - wcwidth==0.2.13
@@ -150,5 +152,5 @@ dependencies:
       - websocket-client==1.8.0
       - websockets==12.0
       - widgetsnbextension==4.0.11
-      - zipp==3.19.1
+      - zipp==3.19.2
 
